animate__infinite	infinite

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <!-- CSS -->
     <link rel="stylesheet" href="https://unpkg.com/destyle.css@1.0.5/destyle.css">
     <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
-    <div class="content">
+    <div class="content animate__animated animate__headShake animate__infinite infinite">
         <h1>ごとうみゆり </h1>
         <!-- <iframe class="youtube" src="https://www.youtube.com/embed/JiJZDlpJXvc?autoplay=1&controls=0&loop=1&playlist=JiJZDlpJXvc&origin=http://example.com" frameborder="0" muted></iframe> -->
     </div>
