--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://unpkg.com/destyle.css@1.0.5/destyle.css">
-    <link href="style.css" rel="stylesheet">
+    <!-- <link href="style.css" rel="stylesheet"> -->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
     <div class="content">
-        <h1>ごとうみゆり<br>ごとうたゆう<br>ごとうさゆり</h1>
-        <!-- <iframe class="youtube" src="https://www.youtube.com/embed/JiJZDlpJXvc?autoplay=1&controls=0&loop=1&playlist=JiJZDlpJXvc&origin=http://example.com" frameborder="0" muted></iframe> -->
+        <!-- <h1 animate__animated animate__fadeIn animate__infinite infinite animate__slower 3s>みゆり</h1> -->
+        <div class="fade">ここがふわっとするよ</div>
     </div>
     <video src="Ink - 67358.mp4" poster="poster.jpg" autoplay loop muted></video>
 
