--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="content animate__animated animate__headShake animate__infinite infinite">
+    <div class="content animate__animated animate__pulse animate__infinite infinite animate__slower	3s">
         <h1>ごとうみゆり </h1>
         <!-- <iframe class="youtube" src="https://www.youtube.com/embed/JiJZDlpJXvc?autoplay=1&controls=0&loop=1&playlist=JiJZDlpJXvc&origin=http://example.com" frameborder="0" muted></iframe> -->
     </div>
