ステージングだけ

--- a/kurikinton/index.html
+++ b/kurikinton/index.html
@@ -58,7 +58,8 @@
             <section class="content_read">
                 <div class="content-inner">
                     <img src="images/top/tit_kuri2021_01.jpg" alt="純和栗の上品な味わいを">
-                    <div class="content_kaki">
+
+                    <div class="content_kaki content-wrap">
                         <div class="content_kaki_left">
                             <img src="images/top/img_kuri2021_01.jpg" alt="栗きんとんをおとりよせ岐阜美濃より"></div>
                         <div class="content_kaki_right">
@@ -67,9 +68,6 @@
                             <a href="#" class="btn-gradient-3d">焼き栗きんとんをもっと見る&nbsp;<i class="fas fa-angle-double-right"></i></a>
                         </div>
                     </div>
-
-
-
                 </div>
             </section>
             <section class="content_startBuy">
