--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>You Tube動画を背景 </title>
+    <title>You Tube動画を背 </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- CSS -->
