くりの作業コミット１回目

--- a/kurikinton/index.html
+++ b/kurikinton/index.html
@@ -20,7 +20,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="format-detection" content="telephone=no, email=no, address=no">
-    <title>焼き栗きんとん｜ライフィスターズ</title>
+    <title>焼き栗きんとん｜ライフィスタズ</title>
 
     <meta name="keywords" content="栗ごころ,松峰,栗,羊羹,小豆,おやつ,和菓子,手作り,プレゼント
 ,お菓子,松谷園" />
