--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="content">
         <!-- <h1 animate__animated animate__fadeIn animate__infinite infinite animate__slower 3s>みゆり</h1> -->
-        <div class="fade">ここふわっとするかも</div>
+        <div class="fade">ここふわっとするもよ</div>
     </div>
     <video src="Ink - 67358.mp4" poster="poster.jpg" autoplay loop muted></video>
 
