--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="content">
-        <h1>ごとうみゆり<br>ごとうたう<br>ごとうさゆり</h1>
+        <h1>ごとうみり<br>ごとうたう<br>ごとうさゆり</h1>
         <!-- <iframe class="youtube" src="https://www.youtube.com/embed/JiJZDlpJXvc?autoplay=1&controls=0&loop=1&playlist=JiJZDlpJXvc&origin=http://example.com" frameborder="0" muted></iframe> -->
     </div>
     <video src="Ink - 67358.mp4" poster="poster.jpg" autoplay loop muted></video>
