--- a/kurikinton/index.html
+++ b/kurikinton/index.html
@@ -45,43 +45,77 @@
     <script src="js/common/common.js" type="text/javascript"></script>
     <script src="js/common/jquery.fadethis.min.js" type="text/javascript"></script>
 
-    <!-- fontawesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+
+    <!-- googlefont -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div id="wrapper" class="page_top">
         <main>
             <div class="mainImg">
-                <h1><img src="images/top/img_main_2021.jpg" alt="栗きんとんをおとりよせ岐阜美濃より"></h1>
+                <h1><img src="images/top/test01.png" alt="栗と小豆の贅沢なおいしさ「松峰 栗ごころ」"></h1>
+
+
+                <dl>
+                    <dt><h4>焼きくりきんとん</h4></dt>
+                    <dd>「栗きんとん」の美味しさそのまま、日持ちする焼き栗きんとんに仕上げました。職人が一つひとつ丁寧に手作りしています。</dd>
+                </dl>
             </div>
             <section class="content_read">
                 <div class="content-inner">
-                    <img src="images/top/tit_kuri2021_01.jpg" alt="純和栗の上品な味わいを">
 
-                    <div class="content_kaki content-wrap">
-                        <div class="content_kaki_left">
-                            <img src="images/top/img_kuri2021_01.jpg" alt="栗きんとんをおとりよせ岐阜美濃より"></div>
-                        <div class="content_kaki_right">
-                            <img src="images/top/tit_kuri2021_02.jpg" alt="焼きくりきんとん">
-                            <p>「栗きんとん」の美味しさそのまま、日持ちする焼き栗きんとんに仕上げました。職人が一つひとつ丁寧に手作りしています。</p>
-                            <a href="#" class="btn-gradient-3d">焼き栗きんとんをもっと見る&nbsp;<i class="fas fa-angle-double-right"></i></a>
-                        </div>
-                    </div>
+
+                    <dl>
+                        <dt><h4>焼きくりきんとん</h4></dt>
+                        <dd>「栗きんとん」の美味しさそのまま、日持ちする焼き栗きんとんに仕上げました。職人が一つひとつ丁寧に手作りしています。</dd>
+                    </dl>
+                    <dl>
+                        <dt><h4>焼きくりきんとん</h4></dt>
+                        <dd>「栗きんとん」の美味しさそのまま、日持ちする焼き栗きんとんに仕上げました。職人が一つひとつ丁寧に手作りしています。</dd>
+                    </dl>
                 </div>
             </section>
-            <section class="content_startBuy">
-                <p class="content-wrap"><img src="img/top/txt_start-01.svg" alt="10月30日（金）AM9:00より受付スタート"></p>
+
+            <section class="content_sup">
+                <div class="content-inner">
+
+                    <img src="images/top/img_main_sup.png" alt="厳選和栗100%使用">
+
+                </div>
             </section>
+
+
+
+
+
             <section class="content_entry">
                 <div class="content_entry-inner">
                     <div class="content-inner">
-                        <p class="fadein"><img src="images/common/img_entry-01.png" alt="焼き栗きんとん、栗ごごろ　お電話でも注文承ります。"></p>
+
                         <h2>Web・電話 にて購入受付！</h2>
-                        <div class="content-wrap btn_link-entry">
-                            <a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%E5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});"
-                                target="_blank" class="btn_link-brown"><span>購入はこちらから</span></a>
+                        <div class="content_entry_flex content-wrap">
+                            <div class="content-wrap btn_link-entry content_entry_left">
+                                <a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%E5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});"
+                                    target="_blank" class="btn_link-brown">
+                                    <div class="content_btn_p">焼きくりきんとん
+                                    </div>
+                                    <br><span>購入はこちらから</span></a>
+                            </div>
+
+                            <div class="content-wrap btn_link-entry content_entry_right">
+                                <a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%E5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});"
+                                    target="_blank" class="btn_link-brown">
+                                    <div class="content_btn_p">栗ごころ
+                                    </div>
+                                    <br><span>購入はこちらから</span></a>
+                            </div>
+
                         </div>
+
+
                         <div class="content-wrap">
                             <div class="btn_link-tel">
                                 <a href="tel:+81-58-268-7820"><img src="images/common/img_entry-tel.png" alt="TEL：058-268-7820"></a>
@@ -92,80 +126,72 @@
                         </div>
                     </div>
                 </div>
+                <!-- <div class="content-wrap">
+				<img src="images/top/bg_line-03.svg"alt="ドットライン"></div> -->
+
             </section>
+
             <section class="content_report">
                 <div class="content-wrap">
-                    <h2><img src="img/top/tit_report-01.png" alt="昭和47年の創業から多くの方に愛されるお菓子をつくる 御菓子処 松谷園（まつたにえん）"></h2>
+                    <h2><img src="images/top/tit_report-01.png" alt="昭和47年の創業から多くの方に愛されるお菓子をつくる 御菓子処 松谷園（まつたにえん）"></h2>
                     <div class="report_main">
-                        <img src="img/top/img_report-01.png" alt="御菓子処 松谷園（まつたにえん）">
-                        <p class="report_main-tit fadein"><img src="img/top/tit_report-02.png" alt="巷で噂の「御菓子処 松谷園」に潜入!"></p>
+                        <img src="images/top/img_report-01.png" alt="御菓子処 松谷園（まつたにえん）">
+                        <p class="report_main-tit fadein"><img src="images/top/tit_report-02.png" alt="巷で噂の「御菓子処 松谷園」に潜入!"></p>
                         <p class="report_main-txt">創業以来、松谷園の歴史を見てきた看板。</p>
                     </div>
                 </div>
                 <div class="content-wrap">
                     <div class="report-inner">
-                        <h3 class="fadein"><img src="img/top/tit_report-03.svg" alt="地元をはじめ、全国からも注文が入る栗のお菓子"></h3>
-                        <p>1972（昭和47）年創業、生菓子や引き菓子を冠婚葬祭場へ届けながら、和菓子店を営んでいた「御菓子処 松谷園」。個人のお客様にもっと気軽に足を運んで欲しい、という想いから2011（平成23）年、ショッピングセンターに隣接する今の場所に移転をし、丁寧なお菓子づくりを続けています。<br> 商品は栗きんとんを中心に、栗きんとんを羊羹で巻いた「栗ごころ」や栗そのものを使った「栗蒸羊羹」など、栗のお菓子がメイン。数年ごとに新商品開発をし、新しい味も求めており、栗きんとんを焼いた「焼き栗きんとん」は多治見市観光協会の推奨品に認定されているなど、地元にも貢献をしています。
-                            <br> また、全国からの注文も受けており、大勢に親しまれている和菓子店です。
-                        </p>
+                        <h4 class="fadein">
+                            <!-- <img src="images/top/tit_report-03.svg" alt="地元をはじめ、全国からも注文が入る栗のお菓子"> -->
+                            地元をはじめ、<br> 全国からも注文が入る栗のお菓子
+                        </h4>
+                        <p>1972（昭和47）年創業、生菓子や引き菓子を冠婚葬祭場へ届けながら、和菓子店を営んでいた「御菓子処 松谷園」。商品は栗きんとんを中心に、栗きんとんを羊羹で巻いた「栗ごころ」、栗そのものを使った「栗蒸羊羹」など、栗のお菓子がメイン。数年ごとに新商品を開発し、新しい味も求めており、栗きんとんを焼いた「焼き栗きんとん」は多治見市観光協会の推奨品に認定されているなど、地元にも貢献をしています。全国からの注文も多く、大勢に親しまれている和菓子店です。</p>
                     </div>
                     <div class="report-2photo flex">
                         <dl>
-                            <dt><img src="img/top/img_report-02.png" alt="黒糖わらびもち"></dt>
-                            <dd>食感が楽しい「栗きんとんわらび」と「黒糖わらびもち」。</dd>
+                            <dt><img src="images/top/img_report-02.jpeg" alt="焼きくりきんとんをバーナーで焼く"></dt>
+                            <dd>焼き栗きんとん</dd>
                         </dl>
                         <dl>
-                            <dt><img src="img/top/img_report-03.png" alt="うながっぱ 美濃 初衣"></dt>
-                            <dd>多治見市のキャラクターが描かれた「うながっぱ 美濃 初衣」。</dd>
+                            <dt><img src="images/top/img_report-03.jpeg" alt="栗きんとん羊羹栗ごころ"></dt>
+                            <dd>栗きんとん羊羹『栗ごころ』</dd>
                         </dl>
                     </div>
-                    <figure>
-                        <p><img src="img/top/img_report-04.png" alt="焼き栗きんとん"></p>
-                        <figcaption>独自の製法で栗きんとんを1ヶ月以上保存できる「焼き栗きんとん」。</figcaption>
-                    </figure>
+
                     <div class="report-inner">
-                        <h3 class="fadein"><img src="img/top/tit_report-04.svg" alt="和菓子作りで大切にされていることを教えてください"></h3>
-                        <h4>丁寧に作り、ほっとできる味をお届けすることです。</h4>
+
+                        <h4 class="fadein">季節や地域を感じられる<br>ほっとできる味わいをお届けします</h4>
                         <div class="flex">
                             <div class="report-inner_left">
                                 <figure>
-                                    <p><img src="img/top/img_report-05.png" alt=""></p>
-                                    <figcaption>一つひとつ心を込めて。栗のおいしさを味わってもらうために。</figcaption>
+                                    <p><img src="images/top/img_report-05.jpeg" alt=""></p>
+                                    <figcaption>この道３０年以上の 和菓子職人松谷光二さん
+                                    </figcaption>
                                 </figure>
                             </div>
                             <div class="report-inner_right">
-                                <p class="mb_plus">東濃地域は栗が特産。それにちなみ、栗を中心にした和菓子を味わっていただきたいと、手作りをしています。季節や地域を感じられる和菓子を目指しています。<br> そして、和菓子は時間が経つと味が落ちてしまうため、なるべく新鮮な状態、できたてのままを食べていただくことを大切にしています。
+                                <p class="mb_plus">岐阜県東濃地域は栗が特産。それにちなみ、お菓子には岐阜県産の栗をはじめ、厳選した国産栗を使っています。和菓子は時間が経つと味が落ちてしまうため、なるべく新鮮な状態、出来立てのままで届けられるよう、毎日丁寧に手作りしています。</p>
+                                <p>
+                                    <figure><img src="images/top/img_report-06.jpeg" alt="">
+                                        <figcaption>蒸した栗を丁寧に潰した後、 濾してきめ細かい栗きんとんに。
+                                        </figcaption>
+                                    </figure>
                                 </p>
-                                <p><img src="img/top/img_report-06.png" alt=""></p>
                             </div>
                         </div>
                     </div>
-                    <div class="report-inner">
-                        <h3 class="fadein"><img src="img/top/tit_report-05.svg" alt="人気の「栗ごころ」について教えて！"></h3>
-                        <h4>栗きんとんと羊羹のおいしさを<br>同時に味わえる和菓子です。</h4>
-                        <p>20年ほど前にオリジナル商品として考えたお菓子です。棒状の栗きんとんをのし状にした羊羹で巻き、竹皮に包んで蒸します。蒸すことで羊羹が一度とろとろになるため、羊羹の甘さが栗きんとんと馴染み、おいしさを引き出します。<br>蒸し上げたものを冷やすことで再び羊羹が固まり、栗ごころが完成します。脱酸素剤と包装し、日持ちをするようにしました。また、詰め合わせの化粧箱の掛け紙には多治見市の花、桔梗をデザインし、多治見を感じていただいています。</p>
-                    </div>
-                    <figure>
-                        <p><img src="img/top/img_report-07.png" alt="栗ごころ"></p>
-                        <figcaption>竹皮に包まれた「栗ごころ」。贅沢な味わいが楽しめる。</figcaption>
-                    </figure>
-                    <div class="report-inner">
-                        <h3 class="fadein"><img src="img/top/tit_report-06.svg" alt="お仕事をされていて喜びを感じる時を教えてください"></h3>
-                        <h4>お客様が松谷園のお菓子を<br>リピートしてくださる時です。</h4>
-                        <p>私たちが手作りした和菓子を何度もお買い求めいただける時は嬉しいです。中でも、「栗ごころ」はリピート率が高く、作りがいを感じています。<br> お赤飯やお餅なども得意としていますので、お祝いや行事のお菓子などの要望にもお応えしています。
-                        </p>
-                    </div>
-                    <figure>
-                        <p><img src="img/top/img_report-08.png" alt="店主の松谷光二さん"></p>
-                        <figcaption>店主の松谷光二さん。岐阜市、名古屋市の職人のもとで修行を積み、出身の多治見市で開業された。</figcaption>
-                    </figure>
+
+
+
+
                 </div>
             </section>
             <section class="content_shop">
                 <div class="content-wrap">
                     <h2>御菓子処 松谷園</h2>
                     <div class="shop-inner flex">
-                        <p class="shop-img"><img src="img/top/img_shop.png" alt="御菓子処 松谷園"></p>
+                        <p class="shop-img"><img src="images/top/img_shop.png" alt="御菓子処 松谷園"></p>
                         <div class="shop-txt">
                             <p>時／9時〜17時<br> 休／水曜日、第3火曜日
                                 <br> 岐阜県多治見市住吉町3-53-2
@@ -175,18 +201,32 @@
                     </div>
                 </div>
             </section>
-            <section class="content_startBuy">
-                <p class="content-wrap"><img src="img/top/txt_start-01.svg" alt="10月30日（金）AM9:00より受付スタート"></p>
-            </section>
+
             <section class="content_entry">
                 <div class="content_entry-inner">
                     <div class="content-inner">
-                        <p class="fadein"><img src="img/common/img_entry-01.png" alt="「松峰 栗ごころ」2本 化粧箱入り 4,240円（税込・送料込み、北海道と沖縄への配送は+700円）"></p>
+
                         <h2>Web・電話 にて購入受付！</h2>
-                        <div class="content-wrap btn_link-entry">
-                            <a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%E5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});"
-                                target="_blank" class="btn_link-brown"><span>購入はこちらから</span></a>
+                        <div class="content_entry_flex content-wrap">
+                            <div class="content-wrap btn_link-entry content_entry_left">
+                                <a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%E5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});"
+                                    target="_blank" class="btn_link-brown">
+                                    <div class="content_btn_p">焼きくりきんとん
+                                    </div>
+                                    <br><span>購入はこちらから</span></a>
+                            </div>
+
+                            <div class="content-wrap btn_link-entry content_entry_right">
+                                <a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%E5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});"
+                                    target="_blank" class="btn_link-brown">
+                                    <div class="content_btn_p">栗ごころ
+                                    </div>
+                                    <br><span>購入はこちらから</span></a>
+                            </div>
+
                         </div>
+
+
                         <div class="content-wrap">
                             <div class="btn_link-tel">
                                 <a href="tel:+81-58-268-7820"><img src="images/common/img_entry-tel.png" alt="TEL：058-268-7820"></a>
@@ -230,7 +270,7 @@
                         <h2>送料について</h2>
                         <ul class="list_circle">
                             <li>焼き栗きんとん：10個入りは１箱930円、15個入は1箱1,000円</li>
-                            <li>栗ごころ・LifeeStars特別セット：１箱930円</li>
+                            <li>栗ごころ・和栗菓子二種特撰セット：１箱930円</li>
                         </ul>
                         <ul class="list_caution">
                             <li>同一住所への配送は2箱まで上記料金、3箱以上の場合は1,430円（15個入は1,500円）</li>
@@ -270,31 +310,31 @@
                 </div>
             </section>
 
-            <section class="content_entry">
-                <div class="content_entry-inner">
-                    <div class="content-inner">
-
-                        <h2>Web・電話 にて購入受付！</h2>
-                        <div class="content-wrap btn_link-entry">
-                            <a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%E5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});"
-                                target="_blank" class="btn_link-brown"><span>購入はこちらから</span></a>
-                        </div>
-                        <div class="content-wrap">
-                            <div class="btn_link-tel">
-                                <a href="tel:+81-58-268-7820"><img src="images/common/img_entry-tel.png" alt="TEL：058-268-7820"></a>
-                            </div>
-                            <p class="txt-caution">Webでのご購入が困難な方に限り、お電話にてご注文を承ります。<br> 電話注文は銀行振込のみとなります。
-                                <br> 繋がりにくい場合は、再度お掛け直しください。
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </section>
+            <!-- <section class="content_entry">
+			<div class="content_entry-inner">
+				<div class="content-inner">
+				
+					<h2>Web・電話 にて購入受付！</h2>
+					<div class="content-wrap btn_link-entry">
+						<a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%E5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});" target="_blank" class="btn_link-brown"><span>購入はこちらから</span></a>
+					</div>
+					<div class="content-wrap">
+						<div class="btn_link-tel">
+							<a href="tel:+81-58-268-7820"><img src="images/common/img_entry-tel.png" alt="TEL：058-268-7820"></a>
+						</div>
+						<p class="txt-caution">Webでのご購入が困難な方に限り、お電話にてご注文を承ります。<br>
+						電話注文は銀行振込のみとなります。<br>
+						繋がりにくい場合は、再度お掛け直しください。</p>
+					</div>
+				</div>
+			</div>
+		</section> -->
         </main>
         <footer>
             <div class="content-wrap">
-                <h2><img src="images/common/txt_footer-01.svg" alt="株式会社アドキットインフォケーション"></h2>
+
                 <h3><img src="images/common/txt_footer-02.svg" alt="暮らしを彩るいいもの、Webにいっぱいライフィスターズ ふるさとの逸品通販事業部"></h3>
+                <h2><img src="images/common/txt_footer-01.svg" alt="株式会社アドキットインフォケーション"></h2>
                 <p class="footer-info">岐阜市下奈良1-1-8 咲楽メディアセンター<br> TEL.058-268-7820（10：00〜17：00）
                 </p>
                 <div class="footer_bottom">
