これからお買い物のわく

--- a/kurikinton/index.html
+++ b/kurikinton/index.html
@@ -56,18 +56,10 @@
     <div id="wrapper" class="page_top">
         <main>
             <div class="mainImg">
-                <h1><img src="images/top/test01.png" alt="栗と小豆の贅沢なおいしさ「松峰 栗ごころ」"></h1>
+                <h1><img src="images/top/img_main-01.jpg" alt="栗と小豆の贅沢なおいしさ「松峰 栗ごころ」">
+                </h1>
 
-
-                <dl>
-                    <dt><h4>焼きくりきんとん</h4></dt>
-                    <dd>「栗きんとん」の美味しさそのまま、日持ちする焼き栗きんとんに仕上げました。職人が一つひとつ丁寧に手作りしています。</dd>
-                </dl>
-            </div>
-            <section class="content_read">
-                <div class="content-inner">
-
-
+                <div class="main_flex">
                     <dl>
                         <dt><h4>焼きくりきんとん</h4></dt>
                         <dd>「栗きんとん」の美味しさそのまま、日持ちする焼き栗きんとんに仕上げました。職人が一つひとつ丁寧に手作りしています。</dd>
@@ -76,8 +68,32 @@
                         <dt><h4>焼きくりきんとん</h4></dt>
                         <dd>「栗きんとん」の美味しさそのまま、日持ちする焼き栗きんとんに仕上げました。職人が一つひとつ丁寧に手作りしています。</dd>
                     </dl>
+
+
                 </div>
+                <img src="images/top/img_main02.jpg" alt="ご褒美、手土産、おもてなし、贈答品などに">
+            </div>
+
+
+
+            <section class="content_read yaki">
+                <div class="yakiImg">
+                    <img src="images/top/img_main03.png" alt="岐阜美濃焼き栗きんとん">
+                </div>
+
+                <div class="content-wrap">
+                    <p>通常の栗きんとんはお日持ちが2～3日と短く、遠方へのお土産には適していませんでした。「遠方へ贈りたい」「もっとゆっくり味わいたい」という声に応えて生まれたのが、１ヶ月以上保存できる焼き栗きんとんです。添加物は一切使用せず、国産栗と少量の和三盆糖、水飴のみを使い、職人による特殊製法によって実現。栗きんとん本来の旨みと上品な甘さ、しっとりとした口当たりに、表面を焼き上げて焦げ目をつけることで焼き栗のような香ばしさをプラスしました。</p>
+
+
+                </div>
+
+
+
+
             </section>
+
+
+
 
             <section class="content_sup">
                 <div class="content-inner">
@@ -96,7 +112,7 @@
                     <div class="content-inner">
 
                         <h2>Web・電話 にて購入受付！</h2>
-                        <div class="content_entry_flex content-wrap">
+                        <div class="content_entry_flex">
                             <div class="content-wrap btn_link-entry content_entry_left">
                                 <a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%E5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});"
                                     target="_blank" class="btn_link-brown">
@@ -309,26 +325,6 @@
                     </div>
                 </div>
             </section>
-
-            <!-- <section class="content_entry">
-			<div class="content_entry-inner">
-				<div class="content-inner">
-				
-					<h2>Web・電話 にて購入受付！</h2>
-					<div class="content-wrap btn_link-entry">
-						<a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%E5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});" target="_blank" class="btn_link-brown"><span>購入はこちらから</span></a>
-					</div>
-					<div class="content-wrap">
-						<div class="btn_link-tel">
-							<a href="tel:+81-58-268-7820"><img src="images/common/img_entry-tel.png" alt="TEL：058-268-7820"></a>
-						</div>
-						<p class="txt-caution">Webでのご購入が困難な方に限り、お電話にてご注文を承ります。<br>
-						電話注文は銀行振込のみとなります。<br>
-						繋がりにくい場合は、再度お掛け直しください。</p>
-					</div>
-				</div>
-			</div>
-		</section> -->
         </main>
         <footer>
             <div class="content-wrap">
