--- a/kurikinton/index.html
+++ b/kurikinton/index.html
@@ -68,13 +68,9 @@
                         <dt><h4>焼きくりきんとん</h4></dt>
                         <dd>「栗きんとん」の美味しさそのまま、日持ちする焼き栗きんとんに仕上げました。職人が一つひとつ丁寧に手作りしています。</dd>
                     </dl>
-
-
                 </div>
                 <img src="images/top/img_main02.jpg" alt="ご褒美、手土産、おもてなし、贈答品などに">
             </div>
-
-
 
             <section class="content_read yaki">
                 <div class="yakiImg">
@@ -84,55 +80,50 @@
                 <div class="content-wrap">
                     <p>通常の栗きんとんはお日持ちが2～3日と短く、遠方へのお土産には適していませんでした。「遠方へ贈りたい」「もっとゆっくり味わいたい」という声に応えて生まれたのが、１ヶ月以上保存できる焼き栗きんとんです。添加物は一切使用せず、国産栗と少量の和三盆糖、水飴のみを使い、職人による特殊製法によって実現。栗きんとん本来の旨みと上品な甘さ、しっとりとした口当たりに、表面を焼き上げて焦げ目をつけることで焼き栗のような香ばしさをプラスしました。</p>
 
-
+                    <div class="shop_area">
+                        <img src="images/top/tit_yaki01.svg" alt="焼き栗きんとん">
+                        <div class="content_entry_flex">
+                            <p>１個ずつ丁寧に個包装。ご自宅用はもちろん、お手土産や贈り物にもおすすめ。</p>
+                            <img src="images/top/shop_yaki01.jpg" alt="焼きくりこんとん10個入り">
+                        </div>
+                        <div class="btn_link-entry">
+                            <a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%E5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});"
+                                target="_blank" class="btn_link-brown">
+                                <span>購入はこちらから</span></a>
+                        </div>
+                    </div>
                 </div>
-
-
-
-
             </section>
-
-
-
 
             <section class="content_sup">
                 <div class="content-inner">
 
                     <img src="images/top/img_main_sup.png" alt="厳選和栗100%使用">
-
                 </div>
             </section>
 
-
-
-
-
             <section class="content_entry">
                 <div class="content_entry-inner">
-                    <div class="content-inner">
+                    <div class="content-wrap">
+                        <div class="content-inner">
+                            <h2>Web・電話 にて購入受付！</h2>
+                            <div class="content_entry_flex">
+                                <div class="content-wrap btn_link-entry content_entry_left">
+                                    <a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%Ef5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});"
+                                        target="_blank" class="btn_link-brown">
+                                        <div class="content_btn_p">焼きくりきんとん
+                                        </div>
+                                        <br><span>購入はこちらから</span></a>
+                                </div>
 
-                        <h2>Web・電話 にて購入受付！</h2>
-                        <div class="content_entry_flex">
-                            <div class="content-wrap btn_link-entry content_entry_left">
-                                <a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%E5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});"
-                                    target="_blank" class="btn_link-brown">
-                                    <div class="content_btn_p">焼きくりきんとん
-                                    </div>
-                                    <br><span>購入はこちらから</span></a>
+                                <div class="content-wrap btn_link-entry content_entry_right">
+                                    <a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%E5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});"
+                                        target="_blank" class="btn_link-brown">
+                                        <div class="content_btn_p"><span class="small">栗きんとん羊羹</span>『栗ごころ』
+                                        </div>
+                                        <br><span>購入はこちらから</span></a>
+                                </div>
                             </div>
-
-                            <div class="content-wrap btn_link-entry content_entry_right">
-                                <a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%E5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});"
-                                    target="_blank" class="btn_link-brown">
-                                    <div class="content_btn_p">栗ごころ
-                                    </div>
-                                    <br><span>購入はこちらから</span></a>
-                            </div>
-
-                        </div>
-
-
-                        <div class="content-wrap">
                             <div class="btn_link-tel">
                                 <a href="tel:+81-58-268-7820"><img src="images/common/img_entry-tel.png" alt="TEL：058-268-7820"></a>
                             </div>
@@ -144,7 +135,6 @@
                 </div>
                 <!-- <div class="content-wrap">
 				<img src="images/top/bg_line-03.svg"alt="ドットライン"></div> -->
-
             </section>
 
             <section class="content_report">
@@ -197,12 +187,9 @@
                             </div>
                         </div>
                     </div>
-
-
-
-
                 </div>
             </section>
+
             <section class="content_shop">
                 <div class="content-wrap">
                     <h2>御菓子処 松谷園</h2>
@@ -221,7 +208,6 @@
             <section class="content_entry">
                 <div class="content_entry-inner">
                     <div class="content-inner">
-
                         <h2>Web・電話 にて購入受付！</h2>
                         <div class="content_entry_flex content-wrap">
                             <div class="content-wrap btn_link-entry content_entry_left">
@@ -235,13 +221,11 @@
                             <div class="content-wrap btn_link-entry content_entry_right">
                                 <a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%E5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});"
                                     target="_blank" class="btn_link-brown">
-                                    <div class="content_btn_p">栗ごころ
+                                    <div class="content_btn_p"><span class="small">栗きんとん羊羹</span>『栗ごころ』
                                     </div>
                                     <br><span>購入はこちらから</span></a>
                             </div>
-
                         </div>
-
 
                         <div class="content-wrap">
                             <div class="btn_link-tel">
@@ -292,10 +276,7 @@
                             <li>同一住所への配送は2箱まで上記料金、3箱以上の場合は1,430円（15個入は1,500円）</li>
                             <li>沖縄・北海道への配送は+700円</li>
                         </ul>
-
-
                     </div>
-
 
                     <div class="shopping-inner">
                         <h2>返品について</h2>
@@ -328,7 +309,6 @@
         </main>
         <footer>
             <div class="content-wrap">
-
                 <h3><img src="images/common/txt_footer-02.svg" alt="暮らしを彩るいいもの、Webにいっぱいライフィスターズ ふるさとの逸品通販事業部"></h3>
                 <h2><img src="images/common/txt_footer-01.svg" alt="株式会社アドキットインフォケーション"></h2>
                 <p class="footer-info">岐阜市下奈良1-1-8 咲楽メディアセンター<br> TEL.058-268-7820（10：00〜17：00）
