--- a/kurikinton/index.html
+++ b/kurikinton/index.html
@@ -56,7 +56,8 @@
     <div id="wrapper" class="page_top">
         <main>
             <div class="mainImg">
-                <h1><img src="images/top/img_main-01.jpg" alt="栗と小豆の贅沢なおいしさ「松峰 栗ごころ」">
+                <h1><img class="sp" src="images/top/img_main-01.jpg" alt="栗どころ岐阜美濃より和栗献上">
+                    <img class="pc" src="images/top/img_main-01.jpg@2x-100.jpg" alt="栗どころ岐阜美濃より和栗献上">
                 </h1>
 
                 <div class="main_flex">
@@ -65,19 +66,20 @@
                         <dd>「栗きんとん」の美味しさそのまま、日持ちする焼き栗きんとんに仕上げました。職人が一つひとつ丁寧に手作りしています。</dd>
                     </dl>
                     <dl>
-                        <dt><h4>焼きくりきんとん</h4></dt>
-                        <dd>「栗きんとん」の美味しさそのまま、日持ちする焼き栗きんとんに仕上げました。職人が一つひとつ丁寧に手作りしています。</dd>
+                        <dt><h4><span>栗きんとん羊羹</span> 『栗ごころ』</h4></dt>
+                        <dd>しっとりなめらかな栗きんとんを、小豆香る羊羹の中に閉じ込めました。竹皮で包みじっくりと蒸すことで、美味しさを引き出します。</dd>
                     </dl>
                 </div>
                 <img src="images/top/img_main02.jpg" alt="ご褒美、手土産、おもてなし、贈答品などに">
             </div>
 
             <section class="content_read yaki">
-                <div class="yakiImg">
-                    <img src="images/top/img_main03.png" alt="岐阜美濃焼き栗きんとん">
-                </div>
-
                 <div class="content-wrap">
+                    <div class="yakiImg">
+                        <img src="images/top/img_main03.png" alt="岐阜美濃焼き栗きんとん">
+                    </div>
+
+
                     <p>通常の栗きんとんはお日持ちが2～3日と短く、遠方へのお土産には適していませんでした。「遠方へ贈りたい」「もっとゆっくり味わいたい」という声に応えて生まれたのが、１ヶ月以上保存できる焼き栗きんとんです。添加物は一切使用せず、国産栗と少量の和三盆糖、水飴のみを使い、職人による特殊製法によって実現。栗きんとん本来の旨みと上品な甘さ、しっとりとした口当たりに、表面を焼き上げて焦げ目をつけることで焼き栗のような香ばしさをプラスしました。</p>
 
                     <div class="shop_area">
@@ -92,8 +94,72 @@
                                 <span>購入はこちらから</span></a>
                         </div>
                     </div>
+
+
+                    <div class="shop_area">
+                        <img src="images/top/tit_yaki02.svg" alt="焼き栗きんとん">
+                        <div class="content_entry_flex">
+                            <p>香ばしく焼き上がった日持ちの良い栗きんとんと、上品に小豆が香るなめらか羊羹。上質和栗の旨味が引き立つ二種の特撰和菓子セットです。</p>
+                            <img src="images/top/shop_yaki02.jpg" alt="焼きくりこんとん10個入り">
+                        </div>
+                        <div class="btn_link-entry">
+                            <a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%E5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});"
+                                target="_blank" class="btn_link-brown">
+                                <span>購入はこちらから</span></a>
+                        </div>
+                    </div>
+
+
+                    <div class="shop_area">
+                        <img src="images/top/tit_yaki03.svg" alt="焼き栗きんとん">
+                        <div class="content_entry_flex">
+                            <p>１個ずつ丁寧に個包装。ご自宅用はもちろん、お手土産や贈り物にもおすすめ。</p>
+                            <img src="images/top/shop_yaki03.jpg" alt="焼きくりこんとん10個入り">
+                        </div>
+                        <div class="btn_link-entry">
+                            <a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%E5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});"
+                                target="_blank" class="btn_link-brown">
+                                <span>購入はこちらから</span></a>
+                        </div>
+                    </div>
+
+
+
                 </div>
             </section>
+            <!-- ここから栗ごころ -->
+            <section class="content_read kurigokoro">
+                <div class="content-wrap">
+                    <div class="kurigogoro_tit">
+                        岐阜美濃 <br><span> 栗きんとん羊羹『栗ごころ』</span>
+                    </div>
+                </div>
+
+                <div class="content-inner">
+                    <img src="images/top/img_kurigogoro01.png" alt="岐阜美濃栗きんとん羊羹栗ごころ">
+                </div>
+
+                <div class="content-wrap">
+                    <p>和栗の旨みと甘さを生かした自家製栗きんとんを、国産小豆と岐阜県産糸寒天で炊き上げた羊羹と竹皮で包みます。その後、蒸すことで羊羹が一度とろとろになるため、羊羹の甘さが栗きんとんに馴染み、おいしさを引き出します。時間をかけてじっくりと蒸し上げることで、余分な甘みが落ち、栗と小豆の香りが際立ち上品な味わいに。 従来の栗きんとんよりしっとりとした口当たりで、羊羹のなめらかさとよく合います。
+                    </p>
+
+                    <div class="shop_area">
+                        <img src="images/top/tit_yaki03.svg" alt="焼き栗きんとん">
+                        <div class="content_entry_flex">
+                            <p>１個ずつ丁寧に個包装。ご自宅用はもちろん、お手土産や贈り物にもおすすめ。</p>
+                            <img src="images/top/shop_yaki03.jpg" alt="焼きくりこんとん10個入り">
+                        </div>
+                        <div class="btn_link-entry">
+                            <a href="https://lifee-stars.com/collections/%E3%82%B9%E3%82%A4%E3%83%BC%E3%83%84/products/%E6%9D%BE%E5%B3%B0-%E6%A0%97%E3%81%94%E3%81%93%E3%82%8D-2%E6%9C%AC%E5%8C%96%E7%B2%A7%E7%AE%B1%E5%85%A5%E3%82%8A" onclick="gtag('event', 'banner', {'event_category': 'click', 'event_label': 'entry_btn', 'value': '0'});"
+                                target="_blank" class="btn_link-brown">
+                                <span>購入はこちらから</span></a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+
+
 
             <section class="content_sup">
                 <div class="content-inner">
