--- a/kurikinton/index.html
+++ b/kurikinton/index.html
@@ -99,7 +99,7 @@
                     <div class="shop_area">
                         <img src="images/top/tit_yaki02.svg" alt="焼き栗きんとん">
                         <div class="content_entry_flex">
-                            <p>香ばしく焼き上がった日持ちの良い栗きんとんと、上品に小豆が香るなめらか羊羹。上質和栗の旨味が引き立つ二種の特撰和菓子セットです。</p>
+                            <p>保存期間が長いため、慌てて食べ切る心配なし。お好きなタイミングで美味しい状態でお召し上がりいただけます。</p>
                             <img src="images/top/shop_yaki02.jpg" alt="焼きくりこんとん10個入り">
                         </div>
                         <div class="btn_link-entry">
@@ -161,7 +161,7 @@
                     <div class="shop_area">
                         <img src="images/top/tit_yaki03.svg" alt="焼き栗きんとんと栗きんとん羊羹くりごごろセットtit">
                         <div class="content_entry_flex">
-                            <p>香ばしく焼き上がった日持ちの良い栗きんとんと、上品に小豆が香るなめらか羊羹。上質和栗の旨味が引き立つ二種の特撰和菓子セットです。</p>
+                            <p></p>
                             <img src="images/top/shop_yaki03.jpg" alt="焼き栗きんとんと栗きんとん羊羹くりごごろセットimg">
                         </div>
                         <div class="btn_link-entry">
